--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,80 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+body {
+    background-color: rgb(46, 46, 46);
+}
+
+header {
+    background-color: white;
+
+
+    .header_container {
+        width: 80vw;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+
+        .logo_container {
+            display: flex;
+            align-items: center;
+
+            img {
+                width: 50px;
+                height: 50px;
+            }
+        }
+
+        nav {
+            display: flex;
+            align-items: center;
+            padding-top: 1.5rem;
+
+            ul {
+
+                display: flex;
+
+                li {
+                    text-transform: uppercase;
+                    margin-right: 1.7rem;
+
+                    a {
+                        color: black;
+                        padding-bottom: 2rem;
+                        display: block;
+                        font-size: .7rem;
+                        font-weight: 500;
+
+
+                        &:hover {
+                            color: rgb(2, 130, 249);
+                        }
+                    }
+
+                    .active {
+                        color: rgb(2, 130, 249);
+                        border-bottom: 4px solid rgb(2, 130, 249);
+                    }
+                }
+            }
+
+        }
+    }
+
+
+}
