--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -91,6 +91,19 @@ header {
 
 }
 
+.jumbotron {
+    width: 100%;
+    height: 17rem;
+
+    img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+        object-position: top;
+    }
+}
+
 footer {
     background-color: rgb(48, 48, 48);
 
