--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,12 @@
+@use 'partials/header';
+@use 'partials/jumbotron';
+@use 'partials/comics-content';
+@use 'partials/details-comic';
+@use 'partials/footer';
+
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 
 * {
     padding: 0;
@@ -24,263 +31,22 @@ body {
     background-color: rgb(46, 46, 46);
 }
 
-h3 {
-    font-size: 1.17em;
+h1 {
+    font-size: 2em;
 }
 
-h4 {
+h2 {
+    font-size: 1.5em;
+}
+
+h3 {
     font-size: 1.33em;
 }
 
-header {
-    background-color: white;
-
-
-    .header_container {
-        width: 80vw;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-
-        .logo_container {
-            display: flex;
-            align-items: center;
-
-            img {
-                width: 50px;
-                height: 50px;
-            }
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-            padding-top: 1.5rem;
-
-            ul {
-
-                display: flex;
-
-                li {
-                    text-transform: uppercase;
-                    margin-right: 1.7rem;
-
-                    a {
-                        color: black;
-                        padding-bottom: 2rem;
-                        display: block;
-                        font-size: .7rem;
-                        font-weight: 500;
-
-
-                        &:hover {
-                            color: rgb(2, 130, 249);
-                        }
-                    }
-
-                    .active {
-                        color: rgb(2, 130, 249);
-                        border-bottom: 4px solid rgb(2, 130, 249);
-                    }
-                }
-            }
-
-        }
-    }
-
-
+h4 {
+    font-size: 1.17em;
 }
 
-.jumbotron {
-    width: 100%;
-    height: 17rem;
-
-    img {
-        width: 100%;
-        height: 100%;
-        display: block;
-        object-fit: cover;
-        object-position: top;
-    }
-}
-
-footer {
-    background-color: rgb(48, 48, 48);
-
-    .footer_container {
-        background-image: url("../img/footer-bg.jpg");
-        background-size: cover;
-
-        .footer_menu_container {
-            width: 80vw;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-
-            .menu_container {
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                height: 363px;
-                width: 50%;
-                padding-top: 3rem;
-
-                nav {
-                    margin-bottom: 1rem;
-
-                    h3 {
-                        color: white;
-                        text-transform: uppercase;
-                        margin-bottom: .6rem;
-                    }
-
-                    a {
-                        text-transform: capitalize;
-                        color: rgb(116, 116, 116);
-                        font-weight: 300;
-                        font-size: .9rem;
-
-                        &:hover {
-                            color: white;
-                            text-decoration: underline;
-                        }
-                    }
-                }
-            }
-
-            .footer_logo {
-                width: 45%;
-                background-image: url('../img/dc-logo-bg.png');
-                background-size: cover;
-                background-position: center;
-            }
-        }
-    }
-
-    .footer_social_container {
-        width: 80vw;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-        padding: 1rem 0;
-
-        button {
-            border: 2px solid rgb(2, 130, 249);
-            background-color: transparent;
-            padding: .6rem;
-            cursor: pointer;
-
-            a {
-                color: white;
-                font-weight: 400;
-            }
-
-            &:hover {
-                background-color: rgb(2, 130, 249);
-            }
-        }
-
-        .follow_us {
-            display: flex;
-            align-items: center;
-
-            h4 {
-                color: rgb(2, 130, 249);
-                margin-right: 1rem;
-            }
-
-            .social_icon_container {
-                display: flex;
-
-                img {
-                    margin-left: .7rem;
-                    width: 27px;
-                    height: 27px;
-                    display: block;
-                }
-            }
-        }
-
-    }
-}
-
-main {
-    background-color: rgb(28, 28, 28);
-
-
-    .main_container {
-        width: 80vw;
-        margin: 0 auto;
-        padding: 2rem 0;
-        position: relative;
-
-        .current_series_label {
-            background-color: rgb(2, 130, 249);
-            width: fit-content;
-            color: white;
-            padding: .3rem 1.5rem;
-            position: absolute;
-            top: -20px;
-            left: 0;
-        }
-
-        .card_container {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-
-            a {
-                margin: 0 .5rem 2rem .5rem;
-
-                .my_card {
-                    width: calc((80vw / 6) - 1rem);
-
-                    .thumb {
-
-                        img {
-                            object-fit: cover;
-                            width: 100%;
-                            height: calc((80vw / 6) - 1rem);
-                            object-position: top;
-                            display: block;
-
-                            &:hover {
-                                filter: brightness(50%);
-                            }
-                        }
-                    }
-
-                    h4 {
-                        margin-top: 1rem;
-                        text-transform: uppercase;
-                        color: white;
-                        font-size: .8rem;
-                    }
-                }
-            }
-
-        }
-
-        .button_container {
-            display: flex;
-            justify-content: center;
-
-            button {
-                border: 2px solid rgb(2, 130, 249);
-                background-color: rgb(2, 130, 249);
-                padding: .2rem 2rem;
-                cursor: pointer;
-
-                a {
-                    color: white;
-                    font-weight: 500;
-                    font-size: .7rem;
-                }
-
-                &:hover {
-                    background-color: transparent;
-                }
-            }
-        }
-    }
+h5 {
+    font-size: 1em;
 }
