--- a/resources/scss/partials/_details-comic.scss
+++ b/resources/scss/partials/_details-comic.scss
@@ -18,7 +18,6 @@
                     border: 2px solid white;
                 }
             }
-
         }
     }
 
@@ -60,7 +59,37 @@
                 }
             }
         }
+
+        .secondary_section {
+            background-color: rgb(246, 246, 246);
+            border-top: 2px solid rgb(230, 230, 230);
+            border-bottom: 2px solid rgb(230, 230, 230);
+
+            .center {
+                width: 80vw;
+                margin: 0 auto;
+            }
+
+            .border_bottom {
+                border-bottom: 2px solid rgb(230, 230, 230);
+
+                span {
+                    color: rgb(127, 202, 241);
+                }
+            }
+
+            .action {
+                color: rgb(127, 202, 241);
+            }
+
+            .comic_description {
+                color: rgb(114, 106, 129);
+            }
+
+            h3,
+            h5 {
+                color: rgb(64, 118, 152);
+            }
+        }
     }
-
-
 }
